# mcp-ssh-client

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.github/workflows/: ci.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml
src/mcp_ssh_client/: server.py
tests/: docker-compose.test.yml  test_integration.py  test_server.py
tests/docker/: Dockerfile.ssh
