[project]
name = "mcp-ssh-client"
version = "0.1.0"
description = "MCP server for SSH client interactions"
authors = [{ name = "Gemini CLI" }]
dependencies = [
    "mcp",
    "paramiko",
    "pydantic",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-paramiko",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[project.scripts]
mcp-ssh-client = "mcp_ssh_client.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
